test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/array_of_functions_2.plx
# Identical to array_of_functions.c but parenthesized differently
pub fn ([3]foo)(a: i32) i32;
